--- a/card.html
+++ b/card.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230407085952">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230408203125">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -81,7 +81,6 @@
 			</nav>
 			<section class="page-card__main main-card">
 				<div class="main-card__container">
-
 					<div class="main-card__content">
 						<div class="main-card__image">
 							<div class="image-product">
@@ -126,10 +125,10 @@
 
 							</div>
 						</div>
-						<div class="main-card__info info-card">
-							<div class="info-card__action action-card">
-								<div class="info-card__title">Ліхтар габаритний діодний жовтий 24 V (в-во ISSIKSAN)</div>
-								<div class="info-card__code">Код: ISS20301B</div>
+						<div class="main-card__info info-card _stock-in">
+							<h1 class="info-card__title">Ліхтар габаритний діодний жовтий 24 V (в-во ISSIKSAN)</h1>
+							<div class="info-card__code">Код: ISS20301B</div>
+							<div class="info-card__action action-card ">
 								<div class="action-card__availability">
 									<div class="action-card__price">199 грн</div>
 									<div class="action-card__in-stock ">В наявності</div>
@@ -148,20 +147,23 @@
 									<span>Купити</span>
 									<span>В кошику</span>
 								</button>
-								<button data-popup="#order" type="submit" class="action-card__button-out button button--blue">Замовити</button>
+								<button data-popup="#order" type="submit" class="action-card__button-order button button--blue">Замовити</button>
 							</div>
 							<div class="info-card__contacts contacts-info">
-								<div class="contacts-info__title">Для уточнення даних зв’яжіться з нами</div>
+								<div class="contacts-info__title">Щоб уточнити дані або дізнатися ціну товару з ПДВ, зв’яжіться
+									з нашими фахівцями
+									за вказанити телефонами або через меседжери:
+								</div>
 								<a href="+380979193134" class="contacts-info__phone">+380 (97) 919-31-34</a>
 								<a href="+380996113391" class="contacts-info__phone">+380 (99) 611-33-91</a>
-								<div class="contacts-info__messenger">
-									<a href="#" class="_icon-viber"></a>
-									<a href="#" class="_icon-whatsap"></a>
-									<a href="#" class="_icon-telegram"></a>
+								<div class="contacts-info__messenger messenger">
+									<a href="#" class="messenger__viber"></a>
+									<a href="#" class="messenger__whatsap"></a>
+									<a href="#" class="messenger__telegram"></a>
 								</div>
 							</div>
 							<div class="info-card__return">
-								Повернення товару впродовж 14 днів <a href="">Детальніше</a>
+								Повернення товару впродовж <span>14 днів</span> <a href="">Детальніше</a>
 							</div>
 							<ul class="info-card__line line-info">
 								<li class="line-info__link _icon-cart">
@@ -178,6 +180,180 @@
 					</div>
 				</div>
 			</section>
+			<section class="page-card__informations informations">
+				<div class="informations__container">
+					<div data-tabs class="informations__tabs tabs">
+						<nav data-tabs-titles class="tabs__navigation">
+							<button type="button" class="tabs__title _tab-active">Характеристика</button>
+							<button type="button" class="tabs__title">Опис</button>
+							<button type="button" class="tabs__title">OEM номери</button>
+						</nav>
+						<div data-tabs-body class="tabs__content">
+							<div class="tabs__body">
+								<div class="characteristic">
+									<div class="characteristic__title">Ліхтар габаритний діодний жовтий 24 V (в-во
+										ISSIKSAN)</div>
+									<ul class="characteristic__list">
+										<li class="characteristic__line">
+											<div class="characteristic__name">Виробник</div>
+											<div class="characteristic__value">ISIKSAN</div>
+										</li>
+										<li class="characteristic__line">
+											<div class="characteristic__name">Країна походження</div>
+											<div class="characteristic__value">Туреччина</div>
+										</li>
+										<li class="characteristic__line">
+											<div class="characteristic__name">Код запчастини</div>
+											<div class="characteristic__value">ISS20301B</div>
+										</li>
+										<li class="characteristic__line">
+											<div class="characteristic__name">Тип запчастини</div>
+											<div class="characteristic__value">Аналог</div>
+										</li>
+										<li class="characteristic__line">
+											<div class="characteristic__name">Тип техніки</div>
+											<div class="characteristic__value">Вантажний автомобіль</div>
+										</li>
+										<li class="characteristic__line">
+											<div class="characteristic__name">Одиниця продажу</div>
+											<div class="characteristic__value">шт</div>
+										</li>
+									</ul>
+								</div>
+							</div>
+							<div class="tabs__body">
+								<div class="description">
+									<div class="description__title">Ліхтар габаритний діодний жовтий 24 V (в-во ISSIKSAN)
+									</div>
+									<p>ISIKSAN - один з турецьких виробників запчастин з невеликим асортиментом. Компанія
+										займається виробництвом товарів для комерційних і вантажних транспортних засобів
+										популярних марок. Виробничі потужності підприємства, розташованого в Стамбулі, на
+										протязі його історії постійно збільшувалися і сьогодні складають близько 4000
+										квадратних метрів. Продукція активно експортується в Україну, Білорусь, Болгарію,
+										Казахстан, Молдову, Румунію, Сербію і деякі інші країни. Асортимент бренду невеликий -
+										задні ліхтарі, лампи, протитуманки, деякі аксесуари. Всі позиції знаходяться в
+										бюджетному ціновому сегменті, тому будуть хорошим рішенням для проведення бюджетного
+										ремонту. На всі товари завдано фірмовий логотип компанії, а також власний код. Як і у
+										випадку з іншими турецькими виробникам, запчастини ISIKSAN слід уважно оглядати при
+										отриманні на наявність видимих дефектів та інших вад. Гарантію та умови її надання
+										краще уточнювати заздалегідь.</p>
+								</div>
+							</div>
+							<div class="tabs__body">
+								<div class="oem">
+									<div class="oem__title">OEM номери та номери аналогів</div>
+									<ul class="oem__list">
+										<li class="oem__number">A0028206456</li>
+										<li class="oem__number">002 820 64 56</li>
+										<li class="oem__number">A002 820 64 56</li>
+										<li class="oem__number">4.68162</li>
+										<li class="oem__number">HOR 43</li>
+										<li class="oem__number">LO 178/IC</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+					<form action="" class="informations__response response-informations">
+						<div class="response-informations__title">Написати відгук</div>
+						<div class="response-informations__subtitle">Оцінка</div>
+						<div class="response-informations__rating rating rating_set">
+							<div class="rating__body">
+								<div class="rating__active"></div>
+								<div class="rating__items">
+									<input type="radio" class="rating__item" value="1" name="rating">
+									<input type="radio" class="rating__item" value="2" name="rating">
+									<input type="radio" class="rating__item" value="3" name="rating">
+									<input type="radio" class="rating__item" value="4" name="rating">
+									<input type="radio" class="rating__item" value="5" name="rating">
+								</div>
+							</div>
+							<div class="rating__value">3.5</div>
+						</div>
+						<div class="response-informations__form-line form-line">
+							<label class="form-line__label" for="order-name">Ім'я<span>*</span></label>
+							<input class="form-line__input input" data-validate data-required type="text" data-error="Введіть Ваше ім'я" name="form[response-name]" id="response-name" placeholder="Ім'я" autocomplete="off">
+						</div>
+						<div class="response-informations__form-line form-line">
+							<label class="form-line__label" for="order-comment">Можете написати Ваш коментар</label>
+							<textarea data-autoheight class="form-line__input input" name="form[order-comment]" id="order-comment" placeholder="Ваш коментар"></textarea>
+						</div>
+						<div class="response-informations__emoji-cool cool-emoji">
+							<div class="cool-emoji__checkbox checkbox checkbox--emoji">
+								<input id="emoji_1" data-error="Помилка" class="checkbox__input" type="checkbox" value="1" name="form[]">
+								<label for="emoji_1" class="checkbox__label"><span class="checkbox__text">Гарне
+										обслуговування</span></label>
+							</div>
+							<div class="cool-emoji__checkbox checkbox checkbox--emoji">
+								<input id="emoji_2" data-error="Помилка" class="checkbox__input" type="checkbox" value="2" name="form[]">
+								<label for="emoji_2" class="checkbox__label"><span class="checkbox__text">Швидко
+										зв’язалися</span></label>
+							</div>
+							<div class="cool-emoji__checkbox checkbox checkbox--emoji">
+								<input id="emoji_3" data-error="Помилка" class="checkbox__input" type="checkbox" value="3" name="form[]">
+								<label for="emoji_3" class="checkbox__label"><span class="checkbox__text">Ввічливий
+										продавець</span></label>
+							</div>
+							<div class="cool-emoji__checkbox checkbox checkbox--emoji">
+								<input id="emoji_4" data-error="Помилка" class="checkbox__input" type="checkbox" value="4" name="form[]">
+								<label for="emoji_4" class="checkbox__label"><span class="checkbox__text">Товар був у
+										наявності</span></label>
+							</div>
+							<div class="cool-emoji__checkbox checkbox checkbox--emoji">
+								<input id="emoji_5" data-error="Помилка" class="checkbox__input" type="checkbox" value="5" name="form[]">
+								<label for="emoji_5" class="checkbox__label"><span class="checkbox__text">Актуальний
+										опис</span></label>
+							</div>
+							<div class="cool-emoji__checkbox checkbox checkbox--emoji">
+								<input id="emoji_6" data-error="Помилка" class="checkbox__input" type="checkbox" value="6" name="form[]">
+								<label for="emoji_6" class="checkbox__label"><span class="checkbox__text">Швидко відправили
+										товар</span></label>
+							</div>
+							<div class="cool-emoji__checkbox checkbox checkbox--emoji">
+								<input id="emoji_7" data-error="Помилка" class="checkbox__input" type="checkbox" value="7" name="form[]">
+								<label for="emoji_7" class="checkbox__label"><span class="checkbox__text">Актуальна
+										ціна</span></label>
+							</div>
+						</div>
+						<div class="response-informations__emoji-negative negative-emoji">
+							<div class="negative-emoji__checkbox checkbox checkbox--emoji">
+								<input id="emoji_8" data-error="Помилка" class="checkbox__input" type="checkbox" value="8" name="form[]">
+								<label for="emoji_8" class="checkbox__label"><span class="checkbox__text">Товару не має в
+										наявності</span></label>
+							</div>
+							<div class="negative-emoji__checkbox checkbox checkbox--emoji">
+								<input id="emoji_9" data-error="Помилка" class="checkbox__input" type="checkbox" value="9" name="form[]">
+								<label for="emoji_9" class="checkbox__label"><span class="checkbox__text">Зі мною не
+										зв’язалися</span></label>
+							</div>
+							<div class="negative-emoji__checkbox checkbox checkbox--emoji">
+								<input id="emoji_10" data-error="Помилка" class="checkbox__input" type="checkbox" value="10" name="form[]">
+								<label for="emoji_10" class="checkbox__label"><span class="checkbox__text">Ціна вище
+										зазначеної</span></label>
+							</div>
+							<div class="negative-emoji__checkbox checkbox checkbox--emoji">
+								<input id="emoji_11" data-error="Помилка" class="checkbox__input" type="checkbox" value="11" name="form[]">
+								<label for="emoji_11" class="checkbox__label"><span class="checkbox__text">Невідповідність
+										товару
+										опису</span></label>
+							</div>
+							<div class="negative-emoji__checkbox checkbox checkbox--emoji">
+								<input id="emoji_12" data-error="Помилка" class="checkbox__input" type="checkbox" value="12" name="form[]">
+								<label for="emoji_12" class="checkbox__label"><span class="checkbox__text">Відправляли довше
+										обіцяного</span></label>
+							</div>
+							<div class="negative-emoji__checkbox checkbox checkbox--emoji">
+								<input id="emoji_13" data-error="Помилка" class="checkbox__input" type="checkbox" value="13" name="form[]">
+								<label for="emoji_13" class="checkbox__label"><span class="checkbox__text">Неввічливий
+										продавець</span></label>
+							</div>
+						</div>
+						<div class="response-informations__error">Хоча б один критерій має бути вибраний</div>
+						<button type="submit" class="response-informations__button button button--border-blue">Надіслати
+							відгук</button>
+					</form>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
@@ -191,10 +367,10 @@
 								<a href="+380996113391" class="spoller-footer__link">+380 (99) 611-33-91</a>
 							</div>
 							<a href="avtoshop_2010@ukr.net" class="spoller-footer__link _icon-mail">avtoshop_2010@ukr.net</a>
-							<div class="spoller-footer__social">
-								<a href="#" class="_icon-viber"></a>
-								<a href="#" class="_icon-whatsap"></a>
-								<a href="#" class="_icon-telegram"></a>
+							<div class="spoller-footer__messenger messenger">
+								<a href="#" class="messenger__viber"></a>
+								<a href="#" class="messenger__whatsap"></a>
+								<a href="#" class="messenger__telegram"></a>
 							</div>
 						</div>
 					</div>
@@ -471,7 +647,6 @@
 						<div class="form-order__line line-order">
 							<label class="line-order__label" for="order-tel">Номер телефону <span>*</span></label>
 							<input class="line-order__input input" data-validate data-required type="tel" data-error="Введіть номер телефону" name="form[order-tel]" id="order-tel" placeholder="+380 (__) ___-__-__" autocomplete="off">
-							<div class="form__error"></div>
 						</div>
 						<div class="form-order__line line-order">
 							<label class="line-order__label" for="order-name">Ім'я<span>*</span></label>
@@ -826,7 +1001,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230407085952"></script>
+	<script src="js/app.min.js?_v=20230408203125"></script>
 </body>
 
 </html>
