--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230407085952">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230408203125">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -165,10 +165,10 @@
 								<a href="+380996113391" class="spoller-footer__link">+380 (99) 611-33-91</a>
 							</div>
 							<a href="avtoshop_2010@ukr.net" class="spoller-footer__link _icon-mail">avtoshop_2010@ukr.net</a>
-							<div class="spoller-footer__social">
-								<a href="#" class="_icon-viber"></a>
-								<a href="#" class="_icon-whatsap"></a>
-								<a href="#" class="_icon-telegram"></a>
+							<div class="spoller-footer__messenger messenger">
+								<a href="#" class="messenger__viber"></a>
+								<a href="#" class="messenger__whatsap"></a>
+								<a href="#" class="messenger__telegram"></a>
 							</div>
 						</div>
 					</div>
@@ -445,7 +445,6 @@
 						<div class="form-order__line line-order">
 							<label class="line-order__label" for="order-tel">Номер телефону <span>*</span></label>
 							<input class="line-order__input input" data-validate data-required type="tel" data-error="Введіть номер телефону" name="form[order-tel]" id="order-tel" placeholder="+380 (__) ___-__-__" autocomplete="off">
-							<div class="form__error"></div>
 						</div>
 						<div class="form-order__line line-order">
 							<label class="line-order__label" for="order-name">Ім'я<span>*</span></label>
@@ -800,7 +799,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230407085952"></script>
+	<script src="js/app.min.js?_v=20230408203125"></script>
 </body>
 
 </html>
