--- a/products.html
+++ b/products.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230407085952">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230408203125">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -122,31 +122,31 @@
 									<div class="brand-filter__search">
 										<input class="input" type="search" name="brand" id="brand" placeholder="Пошук">
 									</div>
-									<div class="brand-filter__checkbox checkbox">
+									<div class="brand-filter__checkbox checkbox checkbox--filter">
 										<input class="checkbox__input" type="checkbox" name="" id="b-1">
 										<label class="checkbox__label" for="b-1">Bosch<span>(54)</span></label>
 									</div>
-									<div class="brand-filter__checkbox checkbox">
+									<div class="brand-filter__checkbox checkbox checkbox--filter">
 										<input class="checkbox__input" type="checkbox" name="" id="b-2">
 										<label class="checkbox__label" for="b-2">Bosch<span>(54)</span></label>
 									</div>
-									<div class="brand-filter__checkbox checkbox">
+									<div class="brand-filter__checkbox checkbox checkbox--filter">
 										<input class="checkbox__input" type="checkbox" name="" id="b-3">
 										<label class="checkbox__label" for="b-3">Bosch<span>(54)</span></label>
 									</div>
-									<div class="brand-filter__checkbox checkbox">
+									<div class="brand-filter__checkbox checkbox checkbox--filter">
 										<input class="checkbox__input" type="checkbox" name="" id="b-4">
 										<label class="checkbox__label" for="b-4">Bosch<span>(54)</span></label>
 									</div>
-									<div class="brand-filter__checkbox checkbox">
+									<div class="brand-filter__checkbox checkbox checkbox--filter">
 										<input class="checkbox__input" type="checkbox" name="" id="b-5">
 										<label class="checkbox__label" for="b-5">Bosch<span>(54)</span></label>
 									</div>
-									<div class="brand-filter__checkbox checkbox">
+									<div class="brand-filter__checkbox checkbox checkbox--filter">
 										<input class="checkbox__input" type="checkbox" name="" id="b-6">
 										<label class="checkbox__label" for="b-6">Bosch<span>(54)</span></label>
 									</div>
-									<div class="brand-filter__checkbox checkbox">
+									<div class="brand-filter__checkbox checkbox checkbox--filter">
 										<input class="checkbox__input" type="checkbox" name="" id="b-7">
 										<label class="checkbox__label" for="b-7">Bosch<span>(54)</span></label>
 									</div>
@@ -157,7 +157,7 @@
 							<div class="filters-product__stockin stockin-filter">
 								<div class="stockin-filter__title title-filter">Наявність</div>
 								<div class="stockin-filter__body">
-									<div class="stockin-filter__checkbox checkbox">
+									<div class="stockin-filter__checkbox checkbox checkbox--filter">
 										<input class="checkbox__input" type="checkbox" name="" id="stockin">
 										<label class="checkbox__label" for="stockin">В
 											наявності<span>(43)</span></label>
@@ -572,10 +572,10 @@
 								<a href="+380996113391" class="spoller-footer__link">+380 (99) 611-33-91</a>
 							</div>
 							<a href="avtoshop_2010@ukr.net" class="spoller-footer__link _icon-mail">avtoshop_2010@ukr.net</a>
-							<div class="spoller-footer__social">
-								<a href="#" class="_icon-viber"></a>
-								<a href="#" class="_icon-whatsap"></a>
-								<a href="#" class="_icon-telegram"></a>
+							<div class="spoller-footer__messenger messenger">
+								<a href="#" class="messenger__viber"></a>
+								<a href="#" class="messenger__whatsap"></a>
+								<a href="#" class="messenger__telegram"></a>
 							</div>
 						</div>
 					</div>
@@ -852,7 +852,6 @@
 						<div class="form-order__line line-order">
 							<label class="line-order__label" for="order-tel">Номер телефону <span>*</span></label>
 							<input class="line-order__input input" data-validate data-required type="tel" data-error="Введіть номер телефону" name="form[order-tel]" id="order-tel" placeholder="+380 (__) ___-__-__" autocomplete="off">
-							<div class="form__error"></div>
 						</div>
 						<div class="form-order__line line-order">
 							<label class="line-order__label" for="order-name">Ім'я<span>*</span></label>
@@ -1207,7 +1206,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230407085952"></script>
+	<script src="js/app.min.js?_v=20230408203125"></script>
 </body>
 
 </html>
