--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230409162546">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230410200724">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -463,7 +463,7 @@
 					<a href="#" class="popup-order__image">
 						<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="product photo"></picture>
 					</a>
-					<form data-dev data-popup-message="#order-confirmation" action="files/sendmail/sendmail.php" method="POST" class="popup-order__form form-order">
+					<form data-dev data-goto-error data-popup-message="#order-confirmation" action="files/sendmail/sendmail.php" method="POST" class="popup-order__form form-order">
 						<div class="form-order__product product-order">
 							<div class="product-order__code">Код: <span>ISS20301B</span></div>
 							<a href="#" class="product-order__name">Ліхтар габаритний діодний жовтий 24 V (в-во
@@ -501,15 +501,15 @@
 		</div>
 	</div>
 
-	<div id="order-confirmation" aria-hidden="true" class="popup popup--order-confirmation">
+	<div id="order-confirmation" aria-hidden="true" class="popup popup--confirmation">
 		<div class="popup__wrapper">
 			<div class="popup__content">
-				<div class="order-confirmation">
-					<div class="order-confirmation__title title title--blue">Дякуємо за Ваше замовлення</div>
+				<div class="confirmation">
+					<div class="confirmation__title title title--blue">Дякуємо за Ваше замовлення</div>
 					<p>Ваше замовлення успішно відправлене.</p>
 					<p>Незабаром ми Вам зателефонуємо та надамо усю необхідну інформацію
 						по Вашому замовленню.</p>
-					<button data-close type="button" class="order-confirmation__button button button--blue">Повернутися</button>
+					<button data-close type="button" class="confirmation__button button button--blue">Повернутися</button>
 				</div>
 			</div>
 		</div>
@@ -520,7 +520,7 @@
 			<div class="popup__content">
 				<button data-close type="button" class="popup__close _icon-x"></button>
 				<div class="popup-selection">
-					<form data-dev data-popup-message="#popup-selection-confirmation" class="popup-selection__form form-selection" action="files/sendmail/sendmail.php" method="POST">
+					<form data-dev data-goto-error data-popup-message="#popup-selection-confirmation" class="popup-selection__form form-selection" action="files/sendmail/sendmail.php" method="POST">
 						<div class="form-selection__title title title--blue">Підбір запчастин</div>
 						<div class="form-selection__line line-selection">
 							<label for="vin" class="line-selection__label">Ведіть
@@ -565,14 +565,14 @@
 		</div>
 	</div>
 
-	<div id="popup-selection-confirmation" aria-hidden="true" class="popup popup--selection-confirmation">
+	<div id="popup-selection-confirmation" aria-hidden="true" class="popup popup--confirmation">
 		<div class="popup__wrapper">
 			<div class="popup__content">
-				<div class="selection-confirmation">
-					<div class="selection-confirmation__title title title--blue">Дякуємо за Ваш запит</div>
+				<div class="confirmation">
+					<div class="confirmation__title title title--blue">Дякуємо за Ваш запит</div>
 					<p>Ваш запит успішно відправлений.</p>
 					<p>Наші спеціалісти підберуть запчастини і незабаром зв’яжуться з Вами.</p>
-					<button data-close type="button" class="selection-confirmation__button button button--blue">Повернутися</button>
+					<button data-close type="button" class="confirmation__button button button--blue">Повернутися</button>
 				</div>
 			</div>
 		</div>
@@ -595,14 +595,14 @@
 						<p>Крок 1. Додайте бажані запчастини до вашого кошику, вкажіть адресу і кращий спосіб доставки, виберіть
 							зручний спосіб оплати.</p>
 						<p>Крок 2. Після того, як оплата буде виконана, ви отримаєте товари. Замовлення створені до 15:00
-							відправляються в той же день. Процес доставки починається на
-							наступний робочий день після отримання оплати.</p>
+							відправляються в той же день.</p>
 					</div>
 					<div class="popup-footer__text-block text-block">
 						<h6 class="text-block__title">Замовлення товару, який відсутній</h6>
 						<p>Якщо виникла ситуація, що товар поки що відсутній на складі, не засмучуйтесь. При бажанні ви можете
-							подати запит через клавішу замовити, заповнивши форму. Наші менеджери нададуть терміни поставки і всю
-							необхідну інформацію. У разі потреби, не соромтеся звертатися за допомогою, телефонуйте.</p>
+							подати запит через клавішу замовити, заповнивши форму. Наші менеджери нададуть всю
+							необхідну інформацію про терміни поставки і . У разі потреби, не соромтеся звертатися за допомогою,
+							телефонуйте.</p>
 					</div>
 					<div class="popup-footer__text-block text-block">
 						<h6 class="text-block__title">Інший спосіб замовлення</h6>
@@ -629,14 +629,25 @@
 							залежності від Ваших побажань:</p>
 					</div>
 					<div class="popup-footer__text-block text-block">
-						<h6 class="text-block__title">1. Післяоплата у відділенні Нової пошти.</h6>
-						<p>Оплата здійснюється після того як ви отримали товар на Новій пошті та перевірили його.</p>
+						<h6 class="text-block__title">1. Безготівкова оплата.</h6>
+						<ul class="text-block__marker-list">
+							<li>Онлайн оплата карткою Visa/MasterCard або через Privat24 (оплата здійснюється на сайті при
+								оформленні замовлення)</li>
+							<li>На розрахунковий рахунок ПриватБанку (через касу або Приват24)</li>
+							<li>На розрахунковий рахунок ПриватБанку з ПДВ для юридичних осіб та ФОПів на підставі виставленого
+								рахунку-фактури.</li>
+						</ul>
 					</div>
 					<div class="popup-footer__text-block text-block">
-						<h6 class="text-block__title">2. Оплата за реквізитами.</h6>
-						<p>Оплата запасних частин здійснюється у відділенні комерційного банку. Ця послуга переказу грошей через
-							відділення банку особливо зручна для фізичних осіб і приватних підприємців, що не мають розрахункових
-							рахунків у банках.</p>
+						<h6 class="text-block__title">2. Накладений платіж.</h6>
+						<p>Оплата при отриманні товару на складі вантажоперевізника.</p>
+						<p>Хочемо звернути Вашу увагу, що при даному виді оплати вартість доставки збільшується на суму комісії
+							за пересилання грошей перевізником (послуга доставки грошей за накладений платіж складає 20 грн. + 2%
+							від суми).</p>
+					</div>
+					<div class="popup-footer__text-block text-block">
+						<h6 class="text-block__title">3. Готівкою.</h6>
+						<p>Готівковий розрахунок в касі магазину при самовивезенні.</p>
 					</div>
 					<div class="popup-footer__text-block text-block">
 						<h6 class="text-block__title">Увага!</h6>
@@ -835,7 +846,71 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230409162546"></script>
+
+	<div id="return" aria-hidden="true" class="popup popup--footer">
+		<div class="popup__wrapper">
+			<div class="popup__content">
+				<button data-close type="button" class="popup__close _icon-x"></button>
+				<div class="popup-footer__text">
+					<h5 class="popup-footer__title">Умови повернення та обміну</h5>
+					<div class="popup-footer__text-block text-block">
+						<h6 class="text-block__title"></h6>
+						<p>Компанія здійснює повернення та обмін цього товару відповідно до вимог законодавства. Проте,
+							компанія залишає за собою право відмови від безкоштовного гарантійного ремонту у разі
+							недотримання викладених нижче умов гарантії. Всі умови діють в рамках законодавства про захист прав
+							споживачів і регулюються законодавством країни.</p>
+					</div>
+					<div class="popup-footer__text-block text-block">
+						<h6 class="text-block__title">Терміни повернення:</h6>
+						<p>Повернення можливе протягом 14 днів після отримання (для товарів належної якості).</p>
+						<p>Зворотня доставка товарів здійснюється за домовленістю.
+							Згідно з чинним законодавством ви можете повернути товар належної якості або обміняти його, у разі:
+						</p>
+						<ul class="text-block__marker-list">
+							<li>Товар не був у вживанні і не має слідів використання споживачем: подряпин, сколів, потертостей,
+								плям і т.п.;</li>
+							<li>Товар повністю укомплектований і збережена фабрична упаковка;</li>
+							<li>Збережені всі ярлики і заводське маркування;</li>
+							<li>Товар зберігає товарний вигляд і свої споживчі властивості.</li>
+							<li>Серійний номер і модель виробу повинні відповідати вказаним в гарантійному талоні.</li>
+						</ul>
+						<h6 class="text-block__title">Виріб знімається з гарантії в наступних випадках:</h6>
+						<ul class="text-block__marker-list">
+							<li>у разі порушення правил експлуатації, вказаних в інструкції з експлуатації;</li>
+							<li>якщо виріб має сліди стороннього втручання або була спроба ремонту виробу;</li>
+							<li>якщо виявлені несанкціоновані зміни конструкції або схеми виробу за винятком випадків обумовлених
+								в інструкції з експлуатації;</li>
+							<li>якщо товар використовувався не за призначенням;</li>
+							<li>якщо виявлені механічні пошкодження.</li>
+						</ul>
+						<h6 class="text-block__title">Гарантія не розповсюджується на наступні несправності:</h6>
+						<ul class="text-block__marker-list">
+							<li>пошкодження, викликані попаданням всередину виробу сторонніх предметів, рідин, комах;</li>
+							<li>пошкодження, викликані стихією, пожежею, побутовими чинниками;</li>
+							<li>пошкодження, викликані невідповідністю Державним стандартам параметрів живлячих,
+								телекомунікаційних, кабельних мереж, відсутністю заземлення ті інших подібних зовнішніх чинників;
+							</li>
+							<li>пошкодження, викликані використанням нестандартних (неоригінальних) витратних матеріалів і
+								запчастин;</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div id="response-confirmation" aria-hidden="true" class="popup popup--confirmation">
+		<div class="popup__wrapper">
+			<div class="popup__content">
+				<div class="confirmation">
+					<div class="confirmation__title title title--blue">Дякуємо за ваш відгук!</div>
+					<p>Ваш відгук допомагає нам розвиватися!</p>
+					<button data-close type="button" class="confirmation__button button button--blue">Повернутися</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<script src="js/app.min.js?_v=20230410200724"></script>
 </body>
 
 </html>
