--- a/products.html
+++ b/products.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230410200724">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230410212634">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -1274,14 +1274,14 @@
 		<div class="popup__wrapper">
 			<div class="popup__content">
 				<div class="confirmation">
-					<div class="confirmation__title title title--blue">Дякуємо за ваш відгук!</div>
-					<p>Ваш відгук допомагає нам розвиватися!</p>
+					<div class="confirmation__title title title--blue">Дякуємо за Ваш відгук!</div>
+					<!-- <p>Ваш відгук допомагає нам розвиватися!</p> -->
 					<button data-close type="button" class="confirmation__button button button--blue">Повернутися</button>
 				</div>
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230410200724"></script>
+	<script src="js/app.min.js?_v=20230410212634"></script>
 </body>
 
 </html>
