--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 			<li><a target="_blank" href="catalog.html">Каталог запчастин</a></li>
 			<li><a target="_blank" href="products.html">Сторінка групи товарів</a></li>
 			<li><a target="_blank" href="card.html">Сторінка продукту</a></li>
+			<li><a target="_blank" href="error.html">Сторінка 404</a></li>
+
 		</ol>
 		<h2>Попапи:</h2>
 		<ol class="rootpage__list">
@@ -36,6 +38,10 @@
 			<li><a target="_blank" href="home.html#footer-payment">Умови оплати</a></li>
 			<li><a target="_blank" href="home.html#footer-delivery">Умови доставки</a></li>
 			<li><a target="_blank" href="home.html#footer-conditions">Договір публічної оферти</a></li>
+			<li><a target="_blank" href="home.html#return">Умови повернення товару</a></li>
+			<li><a target="_blank" href="home.html#response-confirmation">Підтвердження відправки відгуку</a></li>
+			<li><a target="_blank" href="home.html#placing-order">Оформлення замовлення</a></li>
+			<li><a target="_blank" href="home.html#placing-order-confirmation">Підтвердження оформлення замовлення</a></li>
 		</ol>
 		<div class="rootpage__tnx">
 			<h2>Дякую за замовлення!</h2>
