--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<li><a target="_blank" href="contacts.html">Контакти</a></li>
 			<li><a target="_blank" href="catalog.html">Каталог запчастин</a></li>
 			<li><a target="_blank" href="products.html">Сторінка групи товарів</a></li>
+			<li><a target="_blank" href="search.html">Сторінка результату пошуку</a></li>
 			<li><a target="_blank" href="card.html">Сторінка продукту</a></li>
 			<li><a target="_blank" href="error.html">Сторінка 404</a></li>
 
@@ -38,6 +39,7 @@
 			<li><a target="_blank" href="home.html#footer-payment">Умови оплати</a></li>
 			<li><a target="_blank" href="home.html#footer-delivery">Умови доставки</a></li>
 			<li><a target="_blank" href="home.html#footer-conditions">Договір публічної оферти</a></li>
+			<li><a target="_blank" href="home.html#footer-privacy-policy">Політика конфіденційності</a></li>
 			<li><a target="_blank" href="home.html#return">Умови повернення товару</a></li>
 			<li><a target="_blank" href="home.html#response-confirmation">Підтвердження відправки відгуку</a></li>
 			<li><a target="_blank" href="home.html#placing-order">Оформлення замовлення</a></li>
