--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 			<li><a target="_blank" href="search.html">Сторінка результату пошуку</a></li>
 			<li><a target="_blank" href="card.html">Сторінка продукту</a></li>
 			<li><a target="_blank" href="error.html">Сторінка 404</a></li>
+			<li><a target="_blank" href="response.html">Сторінка з відгуками</a></li>
 
 		</ol>
 		<h2>Попапи:</h2>
@@ -40,10 +41,11 @@
 			<li><a target="_blank" href="home.html#footer-delivery">Умови доставки</a></li>
 			<li><a target="_blank" href="home.html#footer-conditions">Договір публічної оферти</a></li>
 			<li><a target="_blank" href="home.html#footer-privacy-policy">Політика конфіденційності</a></li>
-			<li><a target="_blank" href="home.html#return">Умови повернення товару</a></li>
+			<li><a target="_blank" href="card.html#return">Умови повернення товару</a></li>
 			<li><a target="_blank" href="home.html#response-confirmation">Підтвердження відправки відгуку</a></li>
 			<li><a target="_blank" href="home.html#placing-order">Оформлення замовлення</a></li>
 			<li><a target="_blank" href="home.html#placing-order-confirmation">Підтвердження оформлення замовлення</a></li>
+			<li><a target="_blank" href="response.html#response">Написати відгук</a></li>
 		</ol>
 		<div class="rootpage__tnx">
 			<h2>Дякую за замовлення!</h2>
