--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 			<li><a target="_blank" href="card.html">Сторінка продукту</a></li>
 			<li><a target="_blank" href="error.html">Сторінка 404</a></li>
 			<li><a target="_blank" href="response.html">Сторінка з відгуками</a></li>
+			<li><a target="_blank" href="placing-order.html">Сторінка замовлення товару</a></li>
+
 
 		</ol>
 		<h2>Попапи:</h2>
@@ -43,7 +45,6 @@
 			<li><a target="_blank" href="home.html#footer-privacy-policy">Політика конфіденційності</a></li>
 			<li><a target="_blank" href="card.html#return">Умови повернення товару</a></li>
 			<li><a target="_blank" href="home.html#response-confirmation">Підтвердження відправки відгуку</a></li>
-			<li><a target="_blank" href="home.html#placing-order">Оформлення замовлення</a></li>
 			<li><a target="_blank" href="home.html#placing-order-confirmation">Підтвердження оформлення замовлення</a></li>
 			<li><a target="_blank" href="response.html#response">Написати відгук</a></li>
 		</ol>
